Adjusting for choices and challenges to render

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,22 @@
 .hidden{
     display: none;
 }
+
+button {
+    color: white;
+    display: inline-block;
+    margin: 5px;
+    background-color: rgb(44, 44, 225);
+    border-radius: 6px;
+    padding: 4px 8px;
+    border: 0;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #8570a5;
+  }
+  
+  .choices button {
+    display: block;
+  }
